--- a/en/requirements/req0033.md
+++ b/en/requirements/req0033.md
@@ -1,1 +1,5 @@
- * [req0033](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0033.md) Modules (ModGnutls, modJk) are installable, defaults are configurable
+ * [req0033](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0033.md) System install & configures modules
+   * modGnutls
+   * modjk
+   * proxy
+   * rewrite
