--- a/en/requirements/req0032.md
+++ b/en/requirements/req0032.md
@@ -1,1 +1,1 @@
- * [req0032](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0032.md) Ports are centrally configurable
+ * [req0032](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0032.md) System configures the ListeningPorts
