--- a/en/requirements/req0031.md
+++ b/en/requirements/req0031.md
@@ -1,1 +1,1 @@
-* [req0031](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0031.md) Security is centrally configurable
+* [req0031](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0031.md) System configures the central security-settings for production grade environments.
