--- a/en/requirements/req0033.md
+++ b/en/requirements/req0033.md
@@ -1,5 +1,6 @@
- * [req0033](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0033.md) System install & configures modules
-   * modGnutls
-   * modjk
-   * proxy
-   * rewrite
+ * [req0033](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0033.md) System install & configures modules.
+   * Supportet modules are:
+     * modGnutls
+     * modjk
+     * proxy
+     * rewrite
