--- a/en/requirements/req0030.md
+++ b/en/requirements/req0030.md
@@ -1,1 +1,1 @@
-* [req0030](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0030.md) Logging centrally configurable
+* [req0030](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0030.md) System configures logging formats.
