--- a/en/requirements/req0035.md
+++ b/en/requirements/req0035.md
@@ -1,1 +1,2 @@
   * [req0035](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0035.md) Redirect http-> https
+    * System configures for each vhost a http and a https configuration. The http configuration redirects all requests to https.
