--- a/en/requirements/req0038.md
+++ b/en/requirements/req0038.md
@@ -1,1 +1,3 @@
-  * [req0038](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0038.md) GnuTls incl. certificates are configurable
+  * [req0038](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0038.md) System configure GnuTls module for VHost
+    * Config Manager configures the vhosts certificates
+    * Sytem provides a default cipher configuration passing SSLLabs tests
