--- a/en/requirements/req0106.md
+++ b/en/requirements/req0106.md
@@ -1,3 +1,3 @@
-  * [req0106](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0106.md) Sicherung gegen RZ Ausfall
+  * [req0106](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0106.md) Sicherung gegen RZ Ausfall. Ein RZ-Ausfall geht von einer Lokal begrenzten Katasrtophe mit einem Umkreis von 50km aus.
     * Rechenzentrums-fremde Filesysteme sind zur Sicherung gegen RZ-Ausfall erlaubt.
     * Rechenzentrums-lokale oder Server-lokale Filesysteme sind zur Sicherung gegen RZ Ausfall nicht erlaubt.
