--- a/en/requirements/req0045.md
+++ b/en/requirements/req0045.md
@@ -1,10 +1,10 @@
----
+<!---
 title: Unterbrechungsfreiheit jekyl  
 todo: translate
 :title: Unterbrechungsfreiheit retext
----
+--->
 
-* [req0045](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0045.md) Backup-Art Unterbrechungsfrei
+* [req0045](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/de/requirements/req0045.md) Backup-Art Unterbrechungsfrei
   * Das System stoppt die Applikation für den Backup nicht. Dabei gelten die folgenden Randbedingungen:
-    * Konsistenz: Die atomare Konsistenz soll gewährleistet sein. Für jede Realisierung muss eine individuelle die Konsistenz definiert sein.
+    * Konsistenz: Die atomare Konsistenz soll gewährleistet sein. Für jede Realisierung muss individuell die Konsistenzerhaltung definiert sein.
     * Backupdauer: Das Backup ist auf eine maximale Laufzeit von 2h begrenzt.
