--- a/de/requirements/req0045.md
+++ b/de/requirements/req0045.md
@@ -6,5 +6,5 @@ todo: translate
 
 * [req0045](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/de/requirements/req0045.md) Backup-Art Unterbrechungsfrei
   * Das System stoppt die Applikation für den Backup nicht. Dabei gelten die folgenden Randbedingungen:
-    * Konsistenz: Die atomare Konsistenz soll gewährleistet sein. Für jede Realisierung muss eine individuelle die Konsistenz definiert sein.
+    * Konsistenz: Die atomare Konsistenz soll gewährleistet sein. Für jede Realisierung muss individuell die Konsistenzerhaltung definiert sein.
     * Backupdauer: Das Backup ist auf eine maximale Laufzeit von 2h begrenzt.
