--- a/en/requirements/req0096.md
+++ b/en/requirements/req0096.md
@@ -1,2 +1,2 @@
-  * [req0096](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0096.md) Backup für Daten
-    * Das System sichert die Daten einer Applikation
+* [req0096](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0096.md) Applicationsdaten Backup
+  * Das System sichert die Daten einer Applikation als Ganzes.
