made requ more specific

--- a/en/requirements/req0041.md
+++ b/en/requirements/req0041.md
@@ -1,1 +1,4 @@
-  * [req0041](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0041.md) ModJk is configurable 
+* [req0041](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0041.md) Module supports mod_jk
+  * Admin can mount url-paths to worker-spec
+  * Admin can unmount subpaths from worker-spec
+  * Admin can configure worker-spec
