made requ more specific

--- a/en/requirements/req0040.md
+++ b/en/requirements/req0040.md
@@ -1,1 +1,5 @@
-  * [req0040](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0040.md) GoogleValidation is installable
+* [req0040](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0040.md) Module supports Googles site ownership validation
+  * The Admin configures google validation id.
+  * In the configuration phase, the Module 
+    * generates an static html file for the given id,
+    * considers the static id on all supported modules (mod_jk, mod_proxy, authenticaton)
