--- a/en/requirements/req0171.md
+++ b/en/requirements/req0171.md
@@ -1,1 +1,1 @@
- * [req0171](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0171.md) User share a link to other users / guests for a sheduled meeting
+* [req0171](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0171.md) User share a link to other users / guests for a scheduled meeting
