--- a/en/quality/req0047/ac001.md
+++ b/en/quality/req0047/ac001.md
@@ -1,4 +1,5 @@
-* [reqp0047/ac001](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/quality/req0047/ac001.md) Acceptance Criteria
+#### [reqp0047/ac001](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/quality/req0047/ac001.md) Acceptance Criteria
+
 | -- Nr. -- | -- Test -- | -- Expected Result -- | -- Result -- |
 |1.|clone git@github.com:DomainDrivenArchitecture/ddaArchitecture.git||
 |2.|cd into repo|
