--- a/en/quality/req0047/ac001.md
+++ b/en/quality/req0047/ac001.md
@@ -2,10 +2,10 @@
 
 |#		|Test										|Expected Result|Result	|
 | -- 	| ------------------ 						| --- 			| --- 	|
-|1.		|clone git@github.com:DomainDrivenArchitecture/ddaArchitecture.git||
-|2.|cd into repo|
-|3.|gitbook install|Done, without error|
-|4.|gitbook build|Done, without error|
-|5.|open file e.g. _book/en/10_backup/index.html in browser|Chapters can be expanded & collapsed|
-|6.| gitbook serve|Done, without error|
-|7.|open http://localhost:4000 in browser|Chapters can be expanded & collapsed|
+|1.		|clone git@github.com:DomainDrivenArchitecture/ddaArchitecture.git|||
+|2.		|cd into repo								|||
+|3.		|gitbook install							|Done, without error||		
+|4.		|gitbook build								|Done, without error||
+|5.		|open file e.g. _book/en/10_backup/index.html in browser|Chapters can be expanded & collapsed||
+|6.		| gitbook serve								|Done, without error||
+|7.		|open http://localhost:4000 in browser		|Chapters can be expanded & collapsed||
