#3 fix for wording

--- a/en/quality/req0047/ac001.md
+++ b/en/quality/req0047/ac001.md
@@ -1,4 +1,4 @@
-#### [reqp0047/ac001](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/quality/req0047/ac001.md) Acceptance Criteria
+#### [reqp0047/ac001](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/quality/req0047/ac001.md)
 
 |#		|Test										|Expected Result|Result	|
 | -- 	| ------------------ 						| --- 			| --- 	|
@@ -6,6 +6,6 @@
 |2.		|cd into repo								|||
 |3.		|gitbook install							|Done, without error||		
 |4.		|gitbook build								|Done, without error||
-|5.		|open file e.g. _book/en/10_backup/index.html in browser|Chapters can be expanded & collapsed||
+|5.		|open file _book/en/10_backup/index.html in browser|Chapters can be expanded & collapsed||
 |6.		| gitbook serve								|Done, without error||
 |7.		|open http://localhost:4000 in browser		|Chapters can be expanded & collapsed||
