--- a/en/requirements/req0047.md
+++ b/en/requirements/req0047.md
@@ -1,4 +1,4 @@
-* [req0047](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0047.md) Expand & ollapse Table of Content
+* [req0047](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0047.md) Expand & collapse Table of Content
   1. System generates a table of content for generated documents / books.
   2. The user can collapsed & expanded a chapter.
   3. The system saves chapters collapse & expand state per user. 
