--- a/en/requirements/req0049.md
+++ b/en/requirements/req0049.md
@@ -13,3 +13,4 @@
     2. tenant / default config
     2. module / nesting module default config
     2. module / nested module default config
+  4. CM System overwrites (change value or delete) on level of single property.  
