Reorder explanations and made better understandable

--- a/en/requirements/req0049.md
+++ b/en/requirements/req0049.md
@@ -1,16 +1,17 @@
 * [req0049](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0049.md) CM System provides Configurations Override Hierarchy (NonFunctional).
-  1. Tenant Configuration: With the following properties
-    1. Tenant Configuration can be authorized discretely.
-    2. Config Manager can use tenant defaults
-    3. Config Manager can use server config
-    4. Config Manager can use instance config 
-  2. Module Default Configuration: With the following properties 
-    1. Each module has to provide a useful default configuration
-    2. Modules can overwrite default config of nested modules.
-  3. Configuration is resolved in the following order (top available config overwrites later):
+  1. CM System overwrites (change a value or delete) on level of single property.  
+  2. Configuration overwrite is resolved in the following order (top available config overwrites later):
     1. tenant / instance config 
     2. tenant / server config
-    2. tenant / default config
-    2. module / nesting module default config
-    2. module / nested module default config
-  4. CM System overwrites (change value or delete) on level of single property.  
+    3. tenant / default config
+    4. module / nesting module default config
+    5. module / nested module default config
+  3. The following dimensions are used for resolfing overwrite:
+    1. Tenant Configuration: With the following properties
+      1. Tenant Configuration can be authorized discretely.
+      2. Config Manager can use tenant defaults
+      3. Config Manager can use server config
+      4. Config Manager can use instance config 
+    2. Module Default Configuration: With the following properties 
+      1. Each module has to provide a useful default configuration
+      2. Modules can overwrite default config of nested modules.
