--- a/de/requirements/req0226.md
+++ b/de/requirements/req0226.md
@@ -1,1 +1,1 @@
-[req0226](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/de/requirements/req0226.md) Templates können definiert und eingebunden werden
+* [req0226](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/de/requirements/req0226.md) Templates können definiert und eingebunden werden
