--- a/de/requirements/req0214.md
+++ b/de/requirements/req0214.md
@@ -1,2 +1,1 @@
-* [req0214](req0214.md) Der Editor bietet eine Suchfunktion (Volltextsuche)
-  * die Suche ist im gesamten Projekt (Buch) möglich
+* [req0214](req0214.md) Der Editor bietet eine Suchfunktion (Volltextsuche); die Suche ist im gesamten Projekt (Buch) möglich
