--- a/de/requirements/req0219.md
+++ b/de/requirements/req0219.md
@@ -1,2 +1,1 @@
-* [req0219](req0219.md) Der Editor überschreibt Änderungen nicht ungefragt
-  * vor allem keine Änderungen, die von dritten (Nutzern/Programmen) geändert wurde
+* [req0219](req0219.md) Der Editor überschreibt Änderungen nicht ungefragt; vor allem keine Änderungen, die von dritten (Nutzern/Programmen) geändert wurde
