--- a/en/requirements/req0226.md
+++ b/en/requirements/req0226.md
@@ -1,3 +1,1 @@
-* [req0226](req0226.md) DevOps can store all credentials versioned & secure.
-  * Versioned means in a public VCS.
-  * Secure means protected by hard crypto.
+* [req0226](req0226.md) DevOps can store all credentials in VCS, secrets are protected by crypto.
