--- a/en/requirements/req0228.md
+++ b/en/requirements/req0228.md
@@ -1,1 +1,1 @@
-* [req0228](req0228.md) DevOps has to enter passphrase on runtime for unlocking hard crypto.
+* [req0228](req0228.md) DevOps has to provide passphrase and private key for runtime decryption.
