--- a/en/requirements/req0232.md
+++ b/en/requirements/req0232.md
@@ -1,1 +1,1 @@
-* [req0232](req0232.md) System does not expose secrets on target system.
+* [req0232](req0232.md) System does not expose secrets in jar files.
