--- a/en/requirements/req0096.md
+++ b/en/requirements/req0096.md
@@ -1,2 +1,6 @@
-* [req0096](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0096.md) Applicationsdaten Backup
-  * Das System sichert die Daten einer Applikation als Ganzes.
+* [req0096](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0096.md) Vom Backup gesicherte Datentypen
+  * Das System sichert die Applikationsdaten.
+  * alternativ: Das System sichert Anwendungs-Code
+  * alternativ: Das System sichert Konfiguration
+  * alternativ: Das System sichert Logdaten
+  * alternativ: Das System sichert Sicherheits-Logdaten
