marked values as example values

--- a/de/requirements/req0044.md
+++ b/de/requirements/req0044.md
@@ -1,4 +1,4 @@
   * [req0044](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/de/requirements/req0044.md) Ein Restore im dauert höchstens im Falle 
-    * eines RZ-Ausfalls: 5 Tage
-    * eines Server-Ausfalls: 2 Tage
-    * eines Applikations-Ausfalls: 1 Tag
+    * eines RZ-Ausfalls: (z.B. 5 Tage)
+    * eines Server-Ausfalls: (z.B. 2 Tage)
+    * eines Applikations-Ausfalls: (z.B. 1 Tag)
