translation of inner URLs of backup/30_requirements

--- a/en/requirements/req0045.md
+++ b/en/requirements/req0045.md
@@ -1,10 +1,4 @@
-<!---
-title: Unterbrechungsfreiheit jekyl  
-todo: translate
-:title: Unterbrechungsfreiheit retext
---->
-
-* [req0045](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/de/requirements/req0045.md) Backup-Art Unterbrechungsfrei
-  * Das System stoppt die Applikation für den Backup nicht. Dabei gelten die folgenden Randbedingungen:
-    * Konsistenz: Die atomare Konsistenz soll gewährleistet sein. Für jede Realisierung muss individuell die Konsistenzerhaltung definiert sein.
-    * Backupdauer: Das Backup ist auf eine maximale Laufzeit von 2h begrenzt.
+* [req0045](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/de/requirements/req0045.md) Backup Type Uninterrupted
+   * The system does not stop the backup application. The following boundary conditions apply:
+     * Consistency: The atomic consistency should be ensured. The consistency conservation must be defined individually for each implementation.
+     * Backup duration: The backup is limited to a maximum runtime of 2h.
