--- a/en/requirements/req0046.md
+++ b/en/requirements/req0046.md
@@ -1,4 +1,4 @@
-* [req0046](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0046.md) Backup-Art Unterbrechend  
-  * Das System stoppt die Applikation für den Backup. Dabei gelten die folgenden Randbedingungen:
-    * Konsistenz: Das System gewährleistet die atomare Konsistenz.
-    * Backupdauer: Das Backup ist auf eine maximale Laufzeit von 15min begrenzt.   
+* [req0046](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0046.md) Backup Type Interrupt
+   * The system stops the application for the backup. The following boundary conditions apply:
+     * Consistency: The system ensures atomic consistency.
+     * Backup duration: The backup is limited to a maximum runtime of 15min.
