--- a/en/requirements/req0096.md
+++ b/en/requirements/req0096.md
@@ -1,6 +1,6 @@
-* [req0096](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0096.md) Vom Backup gesicherte Datentypen
+* [req0096](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0096.md) Backup data types
   * The system backs up application data.
-  * alternativ: The system backs up application code
-  * alternativ: The system backs up configuration
-  * alternativ: The system backs up log data
-  * alternativ: The system backs up security log data
+  * alternative: The system backs up application code
+  * alternative: The system backs up configuration
+  * alternative: The system backs up log data
+  * alternative: The system backs up security log data
