--- a/en/requirements/req0103.md
+++ b/en/requirements/req0103.md
@@ -1,3 +1,3 @@
-  * [req0103](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0103.md) Das System ermöglicht einen Restore auf Applikationsebene.
-    * Applikationsebene bedeutet, den kompletten, konsistenten Stand einer Anwendung. Im Gegensatz dazu ist der Restore
-    * von einzelnen, individuelle Datensätzen / Files eines Benutzers od. einer Transaktion nicht Gegenstand der Anforderung.
+  * [req0103](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0103.md) The system allows a restore to application level.
+     * Application level means the complete, consistent state of an application. In contrast, the restore is
+     * Of individual, individual records / files of a user or a transaction is not the subject of the request.
