--- a/en/requirements/req0104.md
+++ b/en/requirements/req0104.md
@@ -1,4 +1,4 @@
-* [req0104](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0104.md) Sicherung gegen Applikationsfehler
-  * Server-Lokale Filesysteme sind zur Sicherung gegen Applikationsfehler erlaubt.
-    * Der Config Manager legt fest, wie viel unterschiedliche Daten-Backup-Stände server-lokal vorgehalten werden.
-  * Das System stellt sicher, dass zu jedem Zeitpunkt mindestens ein eine konsistentes Backup vorliegt. 
+* [Req0104] (https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0104.md) Backup against application errors
+   * Server Local Filesystems are allowed to secure against application errors.
+     * The Config Manager determines how much different data backups are kept server-local.
+   * The system ensures that at least one consistent backup is available at all times.
