--- a/en/requirements/req0106.md
+++ b/en/requirements/req0106.md
@@ -1,3 +1,3 @@
-* [req0106](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0106.md) Sicherung gegen RZ Ausfall. Ein RZ-Ausfall geht von einer lokal begrenzten Katasrtophe mit einem Umkreis von 50km aus.
-  * Rechenzentrums-fremde Filesysteme sind zur Sicherung gegen RZ-Ausfall erlaubt.
-  * Rechenzentrums-lokale oder Server-lokale Filesysteme sind zur Sicherung gegen RZ Ausfall nicht erlaubt.
+* [Req0106] (https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0106.md) Backup against RZ failure. An RZ failure results from a locally limited catastrophy with a radius of 50km.
+   * Data center-external file systems are allowed to protect against RZ failure.
+   * Data center-local or server-local file systems are not allowed to protect against RZ failure.
