--- a/en/requirements/req0236.md
+++ b/en/requirements/req0236.md
@@ -1,1 +1,1 @@
-* [req0236](req0236.md) Das System legt Backup Daten verschlüsselt ab.
+* [req0236](req0236.md) The system encrypts backup data encrypted.
