--- a/en/requirements/req0044.md
+++ b/en/requirements/req0044.md
@@ -1,4 +1,4 @@
-  * [req0044](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0044.md) Ein Restore im dauert höchstens im Falle 
-    * eines RZ-Ausfalls: (z.B. 5 Tage)
-    * eines Server-Ausfalls: (z.B. 2 Tage)
-    * eines Applikations-Ausfalls: (z.B. 1 Tag)
+  * [req0044](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0044.md) A restore in the lasts at most in the case
+     * Of a computer failure: (e.g., 5 days)
+     * A server failure: (e.g., 2 days)
+     * An application failure: (e.g., 1 day)
