--- a/en/requirements/req0101.md
+++ b/en/requirements/req0101.md
@@ -1,3 +1,3 @@
-* [req0101](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0101.md) Das System erstellt ein vollständiges Backup für Files eines Directories
-    * Das System sichert den File / Directory Owner.
-    * Das System sichert die User, Group und allgemeinen Berechtigungen.
+* [req0101](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0101.md) The system creates a full backup for a directories file
+     * The system saves the file / directory owner.
+     * The system saves the user, group, and general permissions.
