--- a/en/requirements/req0105.md
+++ b/en/requirements/req0105.md
@@ -1,3 +1,3 @@
-* [req0105](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/master/en/requirements/req0105.md) Sicherung gegen Server Fehler
-  * Rechenzentrums-lokale Filesysteme sind zur Sicherung gegen Serverfehler erlaubt.
-  * Server-lokale Filesysteme sind zur Sicherung gegen Serverfehler nicht erlaubt.
+* [Req0105] (https://github.com/DomainDrivenArchitecture/ddaRequery/blob/master/en/requirements/req0105.md) Backup against server errors
+   * Data center-local file systems are allowed to protect against server errors.
+   * Server-local file systems are not allowed to protect against server errors.
