-- making 3 URL correct -- translating 237, 238 -- translating RZ to data center in req0106.md

--- a/en/requirements/req0105.md
+++ b/en/requirements/req0105.md
@@ -1,3 +1,3 @@
-* [Req0105] (https://github.com/DomainDrivenArchitecture/ddaRequery/blob/ali/en/requirements/req0105.md) Backup against server errors
-	* Data center-local file systems are allowed to protect against server errors.
-	* Server-local file systems are not allowed to protect against server errors.
+* [req0105](https://github.com/DomainDrivenArchitecture/ddaRequery/blob/ali/en/requirements/req0105.md) Backup against server errors
+	* Data center-local file systems are allowed to be protected against server errors.
+	* Server-local file systems are not allowed to be protected against server errors.
