--- a/en/requirements/req0106.md
+++ b/en/requirements/req0106.md
@@ -1,3 +1,3 @@
-* [Req0106] (https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/ali/en/requirements/req0106.md) Backup against RZ failure. An RZ failure results from a locally limited catastrophy with a radius of 50km.
-	* Data center-external file systems are allowed to protect against RZ failure.
-	* Data center-local or server-local file systems are not allowed to protect against RZ failure.
+* [req0106](https://github.com/DomainDrivenArchitecture/ddaRequirement/blob/ali/en/requirements/req0106.md) Backup against date center failure. An date center failure results from a locally limited catastrophy with a radius of 50km.
+	* Data center-external file systems are allowed to protect against date center failure.
+	* Data center-local or server-local file systems are not allowed to protect against date center failure.
