--- a/en/requirements/req0237.md
+++ b/en/requirements/req0237.md
@@ -1,1 +1,1 @@
-* [req0237](req0237.md) Das System legt Backup Daten lokal auf dem zu sichernden System ab.
+* [req0237](req0237.md) The system stores backup data locally on the system to be backed up.
