--- a/en/requirements/req0238.md
+++ b/en/requirements/req0238.md
@@ -1,1 +1,1 @@
-* [req0238](req0238.md) Das System legt Backup Daten auf einem S3 Storage Backend ab.
+* [req0238](req0238.md) The system stores backup data on an S3 storage backend.
